task-3/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task3-inference
  labels:
    demo: task-3
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
